# WasmHardway

./: .gitignore  hello.go
browser-tokeniser/: Cargo.toml
browser-tokeniser/src/: lib.rs
browser-tokeniser/static/: index.html
common_data/: deref_asref.md  web_assy_intro.excalidraw
debug_app/: Cargo.toml
debug_app/src/: lib.rs
handle_events_app/: Cargo.toml
handle_events_app/src/: lib.rs
llm_inference/: llama-chat.wasm
minimal-yew/: Trunk.toml  index.html
minimal-yew/src/: app.rs  main.rs
multi-function/: Cargo.toml
multi-function/src/: lib.rs
python-app/: app.yaml
python-server/: app.yaml
python-server/src/: main.py
resources/: basic_inout_wasm.md  closures_bg.md  tutorial_wasm_base_advance.md
tut_wasm1/: Cargo.toml
tut_wasm1/src/: lib.rs
tut_wasm1/static/: index.html
tuto1/: a.out.js  hello.wasm  hello_wasm.c  hello_wasm.cpp  hello_wasm.html  hello_wasm.js  wasm_hello.html
tuto2/: hello_sdl.cpp  hello_sdl.html  hello_sdl.js  hello_sdl.wasm
wasm-game-of-life/: Cargo.toml  LICENSE_MIT
wasm-game-of-life/src/: lib.rs
wasm-game-of-life/www/: index.js
wasmedge_tuto/: hello_aot.wasm  pystone.cmd
wasmer-static/: app.yaml
wasmtime_tuto/: exploring_funcs.py  gcd.py  gcd.wat  hello.py  hello.wat
wbgn_ex1/: index.js  package-lock.json  package.json  webpack.config.js
wbgn_ex1/js/: index.js
wbgn_ex1/src/: lib.rs
wbgn_ex2/: Cargo.toml  index.js  package-lock.json  package.json  webpack.config.js
wbgn_ex2/src/: lib.rs
wbgn_ex3_nobundler/: Cargo.toml  index.html  package-lock.json
wbgn_ex3_nobundler/src/: lib.rs
wbgn_ex_char/: Cargo.toml  package-lock.json
wbgn_ex_char/src/: lib.rs
wbgn_ex_closure/: Cargo.toml  README.md  index.js  package-lock.json
wbgn_ex_closure/src/: lib.rs
wbgn_ex_fetchapi/: Cargo.toml  index.js  package-lock.json  webpack.config.js
wbgn_ex_fetchapi/src/: lib.rs
wbgn_ex_openai/: Cargo.toml  index.html  index.js  package-lock.json
wbgn_ex_openai/src/: api.rs  lib.rs  lib_store
wbgn_ex_syncload/: Cargo.toml  index.html  worker.js
wbgn_ex_syncload/src/: lib.rs
wbgn_ex_weatherept/: Cargo.toml  package-lock.json  util.js
wbgn_ex_weatherept/src/: lib.rs
wbgn_opeai_fr_end/: Cargo.toml  index.html  index.js  package-lock.json  rust_front_end.md  webpack.config.js  worker.js
wbgn_opeai_fr_end/src/: lib.rs
wbgn_webwrkr/: Cargo.toml  index.html  index.js  worker.js
wbgn_webwrkr/src/: lib.rs
wbwrk-basic/: Cargo.toml  index.html  index.js  worker.js
wbwrk-basic/src/: lib.rs
wbwrk-text-input/: Cargo.toml  index.html  index.js  style.css  worker.js
wbwrk-text-input/src/: lib.rs
yew-app/: Cargo.toml  last_corrected_code.md
yew-app/src/: app.rs
yew-axum-diesel/: Cargo.toml  Cors_Restriction.md  index.html
yew-axum-diesel/src/: app.rs
yew_hw_00/: Cargo.toml  index.html
yew_hw_00/src/: app.rs
yew_hw_cb/: Cargo.toml  yew_agents.md  yew_callbacks_states.md
yew_hw_cb/src/: app.rs
yew_hw_comps/: LICENSE-MIT  README.md  index.html
yew_hw_comps/src/: app.rs
yew_hw_html_concepts/: Cargo.toml
yew_hw_html_concepts/src/: app.rs  main.rs
yew_hw_otherstates/src/: app.rs
yew_hw_props/src/: app.rs
yew_hw_usestate/: Cargo.toml
yew_hw_usestate/src/: app.rs
