[package]
name = "tut_wasm1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# openssl = { version = "0.10.66", features = ["vendored"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
futures = "0.3.19"
# reqwest = { version = "0.12.7", features = ["native-tls-vendored"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.54"
features = [
  "console",
  "Window",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "FormData",
  "Headers",
  "Document",
  "Element",
  "EventTarget",
  "HtmlElement"
]

[dependencies.js-sys]
version = "0.3.70"
