[package]
name = "wbgn_opeai_fr_end"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", 
  "Document", "Element", 
  "HtmlElement", "console", 
  "HtmlInputElement", "HtmlTextAreaElement",
  "Request", "Response", 
  "Headers", "TextDecoder", 
  "RequestInit", "RequestMode"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

