[package]
name = "wbwrk-basic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = { version = "0.2.93" }
web-sys = { version = "0.3", features = [
  "console", 
  "Document", 
  "HtmlInputElement", 
  "Window", 
]}
