[package]
name = "yew-axum-diesel"
version = "0.1.0"
edition = "2021"
description = "Project that combines the Axum API layer with Postgres Backend & Yew Frontend"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
yew = { version="0.20", features=["csr"] }
gloo-net = "0.6.0"
wasm-bindgen-futures= "0.4.43"
gloo-console = "0.3.0"
