[package]
name = "yew_hw_cb"
version = "0.1.0"
edition = "2021"
description = "Components communicate async upwards comp tree"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies.web-sys]
version = "0.3.70"
features = [
  "console"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
